Fixed content shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,9 +12,34 @@ body {
   width: 330px;
   margin: 10px;
   margin-top: 20px;
-  animation: fadeIn 0.5s;
 }
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+.cv-body{
+  text-align: center;
+  padding: 0;
+}
+  
+.card-container{
+  margin: 0px;
+  padding: 0px;
+  display: none
+}
+@media screen and (max-width: 700px) {
+  .card-container-0{
+    display: initial
+  }
+}
+@media screen and (max-width: 1400px) and ( min-width: 701px) {
+  .card-container-1{
+    display: initial
+  }
+}
+@media screen and  ( min-width: 1401px) {
+  .card-container-2{
+    display: initial
+  }
+}
+.card-container-col{
+  display: inline-grid;
+  margin: auto;
+  max-width: 100%;
 }
